--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ __pycache__
 db.sqlite3
 media
 
-# Backup files #
-*.bak
+# Backup filess #
+*.bak 
 
 # If you are using PyCharm #
 .idea/**/workspace.xml
